css/style.css
/* ... */
.project-4-col .portfolio-item p {
    font-size: 12px;
    margin: 10px 10px 15px 10px;
}

.project-4-col .portfolio-item h4 {
    font-size: 14px;
}

.project-4-col .portfolio-item a {
    padding: 5px 10px;
    font-size: 13px;
}

.project-2-col .portfolio-item p {
    margin: 30px 30px 40px 30px;
}

.project-2-col .portfolio-item h4 {
    padding-top: 25px;
}

.portfolio-item .figure-caption {
    position: absolute;
    top: 0;
    opacity: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.8);
}

.portfolio-item:hover .figure-caption {
    opacity: 1;
    animation: pulse;
    -webkit-animation: pulse;
    animation-duration: 300ms;
    -webkit-animation-duration: 300ms;
}






/**** Start Call To Action Section ****/

.call-to-action {
    background-image: url(../images/parallax/parallax.jpg);
    background-attachment: fixed;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    text-align: center;
    margin-top: 30px;
    //margin-bottom: 30px;
}

.overlay {
    padding-top: 20px;
    padding-bottom: 20px;
}

.call-to-action h1 {
    color: #fff;
    font-family: 'Oswald', sans-serif;
    font-weight: 300;
    font-size: 40px;
    line-height: 50px;
    text-transform: uppercase;
    letter-spacing: 2px;
}

.call-to-action p {
    color: #fff;
    font-size: 25px;
    line-height: 35px;
    text-transform: uppercase;
    padding-top: 10px;
    letter-spacing: 1px;
    //padding-bottom: 20px;
}

.call-to-action a.custom-btn {
    display: inline-block;
    margin-top: 20px;
    font-size: 20px;
    padding: 15px 35px;
    color: #666;
    background: #fff;
    border: 1px solid #fff;
    text-transform: uppercase;
    font-family: 'Oswald', sans-serif;
    font-weight: 300;
}

.call-to-action a.custom-btn:hover {
    background: none;
    border: 1px solid #fff;
    color: #fff;
}


/**** Start Latest News Section ****/

.latest-news {
    background: #fff;
    border: 1px solid #f1f1f1;
    margin-top: 30px;
    
    //margin-bottom: 30px;
    padding: 0 0 23px 20px;
}

.latest-post {
    padding-right: 0;
}

.latest-post h4 {
    font-weight: 300;
    font-family: 'Oswald', sans-serif;
    text-align: center;
}

.latest-post h4 a {
    font-size: 20px;
    text-align: center;
}

.latest-post p {
    padding-top: 10px;
    text-align: center;
}

.latest-post .news-details {
    padding-top: 5px;
    text-align: center;
}

.latest-post a {
    color: #777;
    font-weight: 300;
}

.latest-post .news-details li {
    display: inline;
    padding-right: 10px;
}
.latest-post .news-details li i{
    padding-right: 5px;
}

.latest-post a.btn-primary:hover {
    color: #333 !important;
}

#latest-news .owl-buttons {
    position: absolute;
    right: 15px;
    top: -44px;
}

#latest-news .owl-buttons div {
    color: #333;
    background: none;
    padding: 0;
}


/**** Start Testimonial Section ****/

.testimonial-section {
    margin-top: 30px;
    background: #fff;
    border: 1px solid #f1f1f1;
    padding: 0 20px 20px 20px;
}

.testimonial-page {
    margin-top: 30px;
    //margin-bottom: 30px;
    background: #fff;
    border: 1px solid #f1f1f1;
    padding:20px;
}

.testimonial {
    text-align: center;
}
.testimonial img {
    width: 145px;
    height: auto;
    margin-left: 25%;
    padding-bottom: 5px;
    border-radius: 100%;
}



.testimonial h4 {
    font-family: 'Oswald', sans-serif;
    font-weight: 300;
    font-size: 20px;
    line-height: 22px;
}

.testimonial p {
    text-align: justify;
}

#testimonials .owl-buttons {
    position: absolute;
    right: 0;
    top: -44px;
}

#testimonials .owl-buttons div {
    color: #333;
    background: none;
    padding: 0;
}



/**** Start Clients Section ****/

.clients-section {
    background: #fff;
    border: 1px solid #f1f1f1;
    margin-top: 30px;
    margin-bottom: 30px;
    padding: 0 20px 20px 20px;
}

#clients img {
    width: 160px;
    height: auto;
}


#clients .owl-buttons {
    position: absolute;
    right: 0;
    top: -44px;
}

#clients .owl-buttons div {
    color: #333;
    background: none;
    padding: 0;
}


/**** Start Footer Section ****/

.footer-section {
    background: #333;
    border: 1px solid #999;
    color: #999;
    padding: 0 20px 20px 20px;
}

.footer-section h3 {
    font-family: 'Oswald', sans-serif;
    font-weight: 300;
    font-size: 22px;
    line-height: 22px;
    padding-bottom: 10px;
    color: #fff;
}

.footer-address strong {
    font-weight: 500;
}

.footer-gallery li {
    position: relative;
    overflow: hidden;
    display: inline-block;
    width: 32.3%;
}

.footer-gallery li img {
    width: 100%;
    height: auto;
}


.footer-link li {
    padding-bottom: 10px;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s;
}

.footer-link li:hover {
    padding-left: 5px;
}

.footer-link li a {
    color: #999;
}

.footer-link li a i {
    padding-right: 5px;
    font-size: 13px;
}

.footer-social li {
    display: inline-block;
    margin-top: 15px;
    margin-bottom: 20px;
}

.footer-social li a {
    padding: 8px 12px;
    font-size: 20px;
    color: #fff;
	-webkit-transition: all 0.3;
	-moz-transition: all 0.3;
	-o-transition: all 0.3;
	transition: all 0.3;
}

.footer-social li a:hover {
	background: transparent;
	border: 1px solid #fff;
}

.footer-social li a i {
    width: 15px;
    height: 15px;
}

.footer-social .btn-primary:hover {
    color: #fff !important;
    border-color: #fff;
}

.footer-section .navbar-form {
    padding-left: 0;
    padding-right: 0;
}

.footer-section .form-control {
    padding-right: 0;
    width: 158px;
    border-radius: 0;
}



/**** Start Copyright Section ****/

.copyright-section {
    background: #222;
    color: #999;
    padding: 20px;
    margin-bottom: 30px;
}

.design {
    text-align: right;
}
/* ... */

